--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,16 @@ toml = "0.8.22"
 serde = { version = "1.0.216", features = ["derive"] }
 env_logger = "0.11.6"
 log = "0.4.22"
-certgenutil = "0.1.1"
+inquire = "0.7.5"
+colored = "3.0.0"
+axum = "0.8.4"
+axum-extra = "0.10.1"
+axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+tokio = { version = "1.44.2", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
+time = "0.3.41"
+hyper-util = { version = "0.1.11", features = ["client", "client-legacy"] }
+hyper = "1.6.0"
+reqwest = "0.12.15"
