Update README, update toml, update depends

--- a/sekai-injector.toml
+++ b/sekai-injector.toml
@@ -1,6 +1,6 @@
 inject_resources = true
-resource_config = "resource_config.json"
-sekai_asset_host = "assetbundle.sekai-en.com"
-target_ip = "127.0.0.1"
+resource_config = "injections.toml"
+upstream_host = "assetbundle.sekai-en.com"
+target_ip = "192.168.86.183"
 server_cert = "server_cert.pem"
 server_key = "server_key.pem"
