--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ time = "0.3.41"
 hyper-util = { version = "0.1.11", features = ["client", "client-legacy"] }
 hyper = "1.6.0"
 reqwest = "0.12.15"
+http-body-util = "0.1.3"
+hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
+rand = "0.9.1"
