--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ reqwest = "0.12.15"
 http-body-util = "0.1.3"
 hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
 rand = "0.9.1"
+
+[dev-dependencies]
+tempfile = "3.20.0"
+openssl = "0.10.72"
