--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ reqwest = "0.12.15"
 http-body-util = "0.1.3"
 hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
 rand = "0.9.1"
+serde_json = "1.0.140"
 
 [dev-dependencies]
 tempfile = "3.20.0"
