--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
 rand = "0.9.1"
 serde_json = "1.0.140"
 local-ip-address = "0.6.5"
+tokio-util = "0.7.15"
 
 [dev-dependencies]
 tempfile = "3.20.0"
